<resources>
    <string name="app_name">Weather</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="change">Change</string>
    <string name="Weather">Weather</string>
    <string name="Location">Location</string>
    <string name="Theme">Theme</string>
    <string name="Language">Language</string>
    <string name="refresh">Refresh</string>
    <string name="enterYourLocation">Enter new location</string>
    <string name="getYourLocation">Get your location automatically</string>
    <string name="chooseTheme">Choose theme</string>
    <string name="LightTheme">Light</string>
    <string name="DarkTheme">Dark</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="Null">-</string>
    <string name="m_s">m/s</string>
    <string name="mbar">mbar</string>
    <string name="percent">%</string>
    <string name="humidity">Humidity</string>
    <string name="celsius">°</string>
    <string name="english_language">English</string>
    <string name="russian_language">Русский</string>
    <string name="ukrainian_language">Український</string>
</resources>