<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/locationPng"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/location_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@id/locationPng"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/location_edit_text"
        android:fontFamily="@font/sf_pro_regular"
        android:hint="@string/enterYourLocation"
        android:paddingStart="10dp"
        android:textColorHint="@color/editTextColor"
        android:textColor="@color/editTextColor"
        tools:ignore="RtlSymmetry"></EditText>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/getYourLocation"
        android:textColor="@color/textViewColor"
        android:textSize="16sp">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateCityButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/update_button"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>