<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/weatherPng"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/main_info_group"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weatherPng"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-105dp"
            android:fontFamily="@font/sf_pro_regular"
            android:gravity="center"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weatherPng"
            android:layout_marginTop="-105dp"
            android:layout_toEndOf="@id/temperature"
            android:fontFamily="@font/sf_pro_regular"
            android:gravity="center"
            android:text="@string/celsius"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/celsius"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/sf_pro_regular"
            android:gravity="center"
            android:text="@string/Null"
            android:textColor="@color/gray"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/sunrise_logo"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:layout_below="@id/temperature"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/sunrise_logo" />

        <TextView
            android:id="@+id/sunrise_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sunrise_logo"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="-2dp"
            android:layout_toEndOf="@id/sunrise_logo"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/sunrise"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/sunrise_time"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sunrise_logo"
            android:layout_alignStart="@id/sunrise_logo"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/sunset_logo"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:layout_below="@id/temperature"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="120dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/sunset_logo" />

        <TextView
            android:id="@+id/sunset_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sunset_logo"
            android:layout_marginStart="-115dp"
            android:layout_marginBottom="-2dp"
            android:layout_toEndOf="@id/sunset_logo"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/sunset"
            android:textColor="@color/white"
            android:textSize="14dp" />


        <TextView
            android:id="@+id/sunset_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sunset_logo"
            android:layout_alignStart="@id/sunset_logo"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/wind_speed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/celsius"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/wind_speed"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/celsius"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/km_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/celsius"
            android:layout_marginStart="-95dp"
            android:layout_marginTop="100dp"
            android:layout_toEndOf="@id/wind_speed_value"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/m_s"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/vector_1"
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_below="@id/wind_speed_text_view"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/vector"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pressure_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_1"
            android:layout_marginStart="-95dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/pressure_value"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/mbar"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/vector_2"
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_below="@id/pressure_text_view"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/vector"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/humidity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/Null"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_2"
            android:layout_marginStart="-95dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/humidity_value"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="18sp" />
</RelativeLayout>