<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/languageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/language_logo" />


    <ImageView
        android:id="@+id/language_holder"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/languageLogo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/languages_holder" />

    <TextView
        android:id="@+id/english_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/vector_1"
        android:layout_alignTop="@id/language_holder"
        android:layout_marginTop="15dp"
        android:text="@string/english_language"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/vector_1"
        android:layout_width="145dp"
        android:layout_height="2dp"
        android:layout_below="@id/languageLogo"
        android:layout_alignStart="@id/language_holder"
        android:layout_marginStart="30dp"
        android:layout_marginTop="95dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/vector"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/russian_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/vector_1"
        android:layout_alignTop="@id/vector_1"
        android:layout_marginTop="10dp"
        android:text="@string/russian_language"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/vector_2"
        android:layout_width="145dp"
        android:layout_height="2dp"
        android:layout_below="@id/russian_language"
        android:layout_alignStart="@id/language_holder"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/vector"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/ukrainian_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/vector_2"
        android:layout_alignTop="@id/vector_2"
        android:layout_marginTop="10dp"
        android:text="@string/ukrainian_language"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:ignore="SpUsage" />

</RelativeLayout>